--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="searches-lista">
                     <li>
                         <div>
-                            <img id="img-results" src="https://avatars.githubusercontent.com/cleytonjesus07" alt="imagem perfil">
+                            <img id="img-results" src="./assets/images/joker.jpg" alt="imagem perfil">
                         </div>
                         <div>
                             <h5>cleyton_jesus07</h5>
@@ -189,7 +189,7 @@
                     </a>
                 </li>
                 <li>
-                    <img src="https://avatars.githubusercontent.com/cleytonjesus07" alt="imagem perfil">
+                    <img src="./assets/images/joker.jpg" alt="imagem perfil">
                 </li>
             </ul>
         </nav>
@@ -546,7 +546,7 @@
         <div class="aside-content">
             <a href="https://cleytonjesus07.github.io/LinkToLinktree/" target="_blank">
                 <div class="content-header">
-                    <img src="https://avatars.githubusercontent.com/cleytonjesus07" alt="">
+                    <img src="./assets/images/joker.jpg" alt="">
                     <div>
                         <h5>cleyton_jesus07</h5>
                         <p>Cleyton Jesus</p>
