--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
                             <img id="img-results" src="./assets/images/joker.jpg" alt="imagem perfil">
                         </div>
                         <div>
-                            <h5>cleyton_jesus07</h5>
-                            <p>Cleyton Jesus <span>Seguindo</span></p> 
-                        </div>
-                        <button>X</button>
-                    </li>
-                    <li>
-                        <div>
-                            <img id="img-results" src="./assets/images/joker.jpg" alt="imagem perfil">
-                        </div>
-                        <div>
                             <h5>Akira_Kurusu</h5>
                             <p>Joker from Persona 5 <span>Seg...</span></p> 
                         </div>
@@ -548,8 +538,8 @@
                 <div class="content-header">
                     <img src="./assets/images/joker.jpg" alt="">
                     <div>
-                        <h5>cleyton_jesus07</h5>
-                        <p>Cleyton Jesus</p>
+                        <h5>Akira_kurusu</h5>
+                        <p>Akira Kurusu</p>
                     </div>
                 </div>
             </a>
